# high-ghost-injections

./: .gitignore  Cargo.toml  README.md  cookies.db  gen_pdf_exploit.py  lsass.rs  main.rs
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  main.rs
server/payloads/: stage1.ps1
server/src/: Cargo.toml  auth.rs  config.rs  crypto.rs  database.rs  handlers.rs  main.rs  models.rs
server/static/: stage1.ps1
server/templates/: dashboard.html
src/: Cargo.toml  browser.rs  build.rs  crypto.rs  debugger.rs  documents.rs  evasion.rs  exfil.rs  injection.rs  lsass.rs  main.rs  payload.rs
