[package]
name = "c2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = "9.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true