[package]
name = "lsass_dumper"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "memoryapi",
    "handleapi",
    "winnt",
    "minidumpapiset",
    "dbghelp",
    "tlhelp32",
    "securitybaseapi",
    "winbase",
    "errhandlingapi",
    "synchapi",
] }
ntapi = "0.4"           # Syscalls NT
rand = "0.8"
base64 = "0.22"