[package]
name = "c2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Armazenamento
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
chrono = "0.4"

# Criptografia
aes = "0.8"
cbc = "0.1"
base64 = "0.22"

# Utilitários
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }